codex-rs/tui/src/external_agent_config_migration/snapshots/codex_tui__external_agent_config_migration__tests__external_agent_config_migration_customize_action.snap
---
source: tui/src/external_agent_config_migration/mod.rs
expression: rendered
---

  > 选择导入内容
  选择要导入的项目。
  Codex 可能会向当前项目文件夹添加文件。
  现有设置不会被更改。
  主目录
    [x] 设置
        Import /Users/alex/.claude/settings.json into /Users/alex/.codex/conf…
    [x] 最近聊天会话
        Import recent Claude Code sessions
        1 个聊天会话：Investigate migration UX

  当前项目：/workspace/project
    [x] 插件
        Import enabled plugins from .claude/settings.json (4 marketplaces, 6 …
        • acme-tools: deployer, formatter, 另有 1 个
        • team-marketplace: asana
        • debug: sample
        • 另有 1 个插件市场
    [x] 说明
        Import CLAUDE.md to AGENTS.md

  已选择 4 / 4 项。
  › 1. 查看选择
  按 enter 继续，↑/↓ 移动，b 返回
