codex-rs/tui/src/external_agent_config_migration/snapshots/codex_tui__external_agent_config_migration__tests__external_agent_config_migration_secondary_source_customize.snap
---
source: tui/src/external_agent_config_migration/mod.rs
expression: rendered
---

  > 选择导入内容
  选择要导入的项目。
  Codex 可能会向当前项目文件夹添加文件。
  现有设置不会被更改。
  主目录
  › [x] 设置
        Import /Users/alex/.cursor/cli-config.json into /Users/alex/.codex/co…

  已选择 1 / 1 项。
    1. 查看选择
  使用 ↑/↓ 移动，space 切换，b 返回
